fix scrollbar problem

--- a/source/styles/components/_directives.scss
+++ b/source/styles/components/_directives.scss
@@ -212,12 +212,6 @@
 		}
 	}
 }
-[ng-scroll] {
-	.handheld & {
-		overflow-y: scroll;
-		-webkit-overflow-scrolling: touch;
-	}
-}
 
 .ps-scrollbar-y-rail {
 	position: absolute;
